.metals/.reports/metals/2023-09-13/r_scala-toplevel-mtags_23-38-13-894
id: file://<WORKSPACE>/Signup.scala:[304..305) in Input.VirtualFile("file://<WORKSPACE>/Signup.scala", "class Signup {
    var id: Int = 0
    var first_name: String = " "
    var last_name: String = " "
    var email: String = " "
    var username: String = " "
    var phone_number: String = " "
    var gender: String = " "
    var pass: String = " "
    var pass2: String = " "
}

object Main {
    def 
}
    ")
file://<WORKSPACE>/Signup.scala:15: error: expected identifier; obtained rbrace
}
^